--- a/index.html
+++ b/index.html
@@ -16,38 +16,19 @@
 
 		<!-- Page Wrapper -->
 			<div id="page-wrapper">
-
+				
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Spectral</a></h1>
-						<nav id="nav">
-							<ul>
-								<li class="special">
-									<a href="#menu" class="menuToggle"><span>Menu</span></a>
-									<div id="menu">
-										<ul>
-											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">Generic</a></li>
-											<li><a href="elements.html">Elements</a></li>
-											<li><a href="#">Sign Up</a></li>
-											<li><a href="#">Log In</a></li>
-										</ul>
-									</div>
-								</li>
-							</ul>
-						</nav>
+						<h1><a href="index.html">Slug Gaming</a></h1>
 					</header>
 
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<h2>Spectral</h2>
-							<p>Another fine responsive<br />
-							site template freebie<br />
-							crafted by <a href="http://html5up.net">HTML5 UP</a>.</p>
-							<ul class="actions special">
-								<li><a href="#" class="button primary">Activate</a></li>
-							</ul>
+							<h2>Slug Gaming</h2>
+							<p>A Group of Passionate Gamers<br />
+							Joined Together<br />
+							To Compete and Have Fun.</p>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
 					</section>
@@ -56,15 +37,15 @@
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Arcu aliquet vel lobortis ata nisl<br />
-								eget augue amet aliquet nisl cep donec</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>We have Weekly Meetings that will be <br> announced on our Discord and Facebook Pages</h2>
+								<p> For Regular updates on our Activities and Events<br/>
+									Follow us on:<br />
+								Facebook, Twitter, and Instagram</p>
 							</header>
 							<ul class="icons major">
-								<li><span class="icon fa-diamond major style1"><span class="label">Lorem</span></span></li>
-								<li><span class="icon fa-heart-o major style2"><span class="label">Ipsum</span></span></li>
-								<li><span class="icon fa-code major style3"><span class="label">Dolor</span></span></li>
+								<li><a href="https://www.facebook.com/sluggamingucsc/?ref=br_rs" target="_blank"><span class="button primary fit"><span class="icon fa-facebook major style3"></span></span></a></li>
+								<li><a href="https://twitter.com/sluggamingucsc?lang=en" target="_blank"><span class="button primary fit"><span class="icon fa-twitter major style2"></span></span></a></li>
+								<li><a href="https://www.instagram.com/sluggamingucsc/?hl=en" target="_blank"><span class="button primary fit"><span class="icon fa-instagram major style4"></span></span></a></li>
 							</ul>
 						</div>
 					</section>
@@ -73,28 +54,31 @@
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
 							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
-								<h2>Magna primis lobortis<br />
-								sed ullamcorper</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<h2>Massive Live Events</h2>
+								<p>Join us at one of our viewing parties, firebase tours, or social gaming nights.<br/></p>
+								<b>"Wow, this stadium is so big"</b><br/>
+								<i>	- Jordan "Subtact" Kinard</i></p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>Tortor dolore feugiat<br />
-								elementum magna</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<h2>A welcoming community</h2>
+								<p>Mentors, mentees, we're all here to have as much fun as possible and <br/>
+								help each other with both in video games and out.</p>
+								<b>"Maybe you should go back to Jayce"</b><br/>
+								<i>	- Tyson "Fleche" Van</i></p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-								<h2>Augue eleifend aliquet<br />
-								sed condimentum</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<h2>Swagalicious Sponsors</h2>
+								<p>Our sponsors provide gaming equipment, stadiums, and free tickets to events. But most importantly, <b>FREE SWAG</b>.</p>
+								<b>"So we can have more than 3 of these cups?"</b><br/>
+								<i>	- Jason "Radastorm2" Yang</i></p>
 							</div>
 						</section>
 					</section>
-
-				<!-- Three -->
+<!-- 
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
@@ -129,33 +113,35 @@
 								</li>
 							</ul>
 						</div>
-					</section>
+					</section> -->
 
-				<!-- CTA -->
-					<section id="cta" class="wrapper style4">
-						<div class="inner">
-							<header>
-								<h2>Arcue ut vel commodo</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
-							</header>
-							<ul class="actions stacked">
-								<li><a href="#" class="button fit primary">Activate</a></li>
-								<li><a href="#" class="button fit">Learn More</a></li>
-							</ul>
-						</div>
-					</section>
-
+			<!-- CTA -->
+				<section id="cta" class="wrapper style4">
+					<div class="inner">
+						<header>
+							<h2>Talk with us on Discord!</h2>
+							<p>We play games, discuss events, and create original content all on our Discord Channel!</p>
+						</header>
+						<ul class="actions stacked">
+							<li><a href="https://discordapp.com/invite/6nm4DgH" target="_blank" class="button fit primary">Join Us!</a></li>
+							<li><a href="#" class="button fit">Learn More</a></li>
+						</ul>
+					</div>
+				</section>
+				<section id="three" class="wrapper style3 special">
+					<h2>Have business inquiries? General questions?</h2>
+					<h4>Contact Us By Email @: </h4>
+					<h1>ucscesportsclub@gmail.com</h1>
+				</section>
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+							<li><a href="https://twitter.com/sluggamingucsc?lang=en" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://www.facebook.com/sluggamingucsc/?ref=br_rs" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+							<li><a href="https://www.instagram.com/sluggamingucsc/?hl=en" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Julius Fan</li><li>Github: <a href="https://github.com/concealedtea" target="_blank">Click Here</a></li>
 						</ul>
 					</footer>
 
