--- a/header.html
+++ b/header.html
@@ -18,7 +18,7 @@
 						<li><a href="events.html">Events</a></li>
 						<li><a href="esports.html">Esports</a></li>
 						<li><a href="sponsors.html">Sponsors</a></li>
-						<!--<li><a href="store.html">Store</a>--></li>
+						<li><a href="store.html">Store</a></li>
 						<li><a href="gallery.html">Gallery</a></li>
 						<li><a href="contact.html">Contact</a></li>
 					</ul>
